--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.2.1"
+  },
+  "devDependencies": {
+    "tailwindcss": "^2.0.2",
+    "twin.macro": "^2.0.7"
   }
 }
