--- a/package.json
+++ b/package.json
@@ -32,6 +32,14 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.21.5",
+    "gatsby-plugin-eslint": "^2.0.8",
+    "prettier": "^2.2.1",
     "tailwindcss": "^2.0.2",
     "twin.macro": "^2.0.7"
   }
