--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "0BSD",
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
+    "fontsource-montserrat": "^3.1.5",
     "gatsby": "^2.26.1",
     "gatsby-background-image": "^1.3.1",
     "gatsby-image": "^2.8.0",
