--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,7 +42,8 @@
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
         "prettier/prettier": "warn",
-        "space-before-function-paren": ["error", {"anonymous": "always", "named": "never", "asyncArrow": "always"}]
+        "space-before-function-paren": ["error", {"anonymous": "always", "named": "never", "asyncArrow": "always"}],
+        "no-use-before-define": ["error", { "functions": false, "classes": true }]
     },
     "root": true
 }
