--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
   "license": "0BSD",
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
+    "dotenv": "^8.2.0",
     "fontsource-montserrat": "^3.1.5",
     "gatsby": "^2.26.1",
     "gatsby-background-image": "^1.3.1",
@@ -27,6 +28,7 @@
     "gatsby-plugin-sitemap": "^2.9.0",
     "gatsby-plugin-styled-components": "^3.7.0",
     "gatsby-source-filesystem": "^2.8.0",
+    "gatsby-source-sanity": "^6.0.5",
     "gatsby-transformer-sharp": "^2.9.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
