--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,7 +43,8 @@
         "react-hooks/exhaustive-deps": "warn",
         "prettier/prettier": "warn",
         "space-before-function-paren": ["error", {"anonymous": "always", "named": "never", "asyncArrow": "always"}],
-        "no-use-before-define": ["error", { "functions": false, "classes": true }]
+        "no-use-before-define": ["error", { "functions": false, "classes": true }],
+        "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
     },
     "root": true
 }
