--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
   },
   "license": "0BSD",
   "dependencies": {
+    "@sanity/block-content-to-react": "^2.0.7",
     "babel-plugin-styled-components": "^1.12.0",
     "dotenv": "^8.2.0",
     "fontsource-montserrat": "^3.1.5",
