--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-styled-components": "^1.12.0",
     "dotenv": "^8.2.0",
     "fontsource-montserrat": "^3.1.5",
+    "framer-motion": "^3.3.0",
     "gatsby": "^2.26.1",
     "gatsby-background-image": "^1.3.1",
     "gatsby-image": "^2.8.0",
