--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
     "lint-staged": "^10.5.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1"
+  },
+  "dependencies": {
+    "@gatsbyjs/reach-router": "^1.3.6",
+    "react-is": "^16.13.1"
   }
 }
