--- a/web/package.json
+++ b/web/package.json
@@ -33,11 +33,13 @@
     "gatsby-source-filesystem": "^2.8.0",
     "gatsby-source-sanity": "^6.0.5",
     "gatsby-transformer-sharp": "^2.9.0",
+    "lottie-react": "^2.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-intersection-observer": "^8.31.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
